# pyRaven

./: .gitignore  BayesObjects.py  BayesObjects_user.ipynb  BuildBook.sh  README.md  Test_loop.ipynb  __init__.py  bayes.py  bayes_doc.ipynb  data.py  data_example.ipynb  diskint.py  diskint2.py  diskint2_doc.ipynb  fit_intensity_example.ipynb  fitparams.py  geometry_doc.ipynb  jb-env.yml  localV.py  loop.py  loop_speed.py  loop_speed2.py  misc.py  params.md  params.py  params_tutorial.ipynb  pattern.py  profileI.py  pyproject.toml  toto.h5
.ipynb_checkpoints/: Test_loop-checkpoint.ipynb
DetailedCodeDocumentation/: BayesObjects_user.ipynb  diskint2_MatrixVoigt_dev.ipynb  diskint2_doc.ipynb
ExampleData/: ExamplePacket.h5  param.json
HowToUsePyRavenTutorial/: 01-DataSetup.ipynb  02-FitIntensity.ipynb  03-ChiSquareCalcLoop.ipynb  04-CalculateProbabilities.ipynb  SpeedTest_ForLoop.ipynb
JupyterBook/: _config.yml  _toc.yml
StandAloneTutorials/: BayesObjects_user.ipynb  ParamsObject_tutorial.ipynb
docs/: .buildinfo  API.html  Installation.html  data_example.html  diskint2_doc.html  diskint2_doc.ipynb  fit_intensity_example.html  genindex.html  index.html  objects.inv  procedure.html  py-modindex.html  search.html  searchindex.js
old-docs/: API.html  data_example.ipynb  diskint2_doc.ipynb  fit_intensity_example.ipynb  genindex.html  objects.inv
oldCodes/: diskint.py
pyRaven/: BayesObjects.py  __init__.py  data.py  diskint2.py  fitparams.py  fitparams_vero.py  localV.py  loop.py  loop_datacube.py  loop_speed2.py  params.py  profileI.py
raven/: raven_zeeman.pro
(+125 files in other folders)
